--- a/site/scss/native.scss
+++ b/site/scss/native.scss
@@ -1,5 +1,5 @@
 :root {
-    --main: #0277BD;
+    --main: #0277bd;
     --accent: #ec407a;
     --highlight: #f48fb1;
     --el1: #121212;
